# houndlens

./: .cursorrules  CLAUDE.md  Cargo.toml  README.md  action.yml  install.sh  llms.txt
.github/: copilot-instructions.md
.github/workflows/: omnilens.yml  release.yml
ci/: generic.sh  gitlab-ci.yml
crates/houndlens-cli/: Cargo.toml
crates/houndlens-cli/src/: main.rs
crates/houndlens-cli/src/commands/: analyze.rs  check.rs  ci.rs  fix.rs  hook.rs  index.rs  init.rs  invariants.rs  mod.rs  query.rs  status.rs  verify.rs
crates/houndlens-core/: Cargo.toml
crates/houndlens-core/src/: ai.rs  config.rs  frontend.rs  invariants.rs  lib.rs  manifest.rs  output.rs  semantic_diff.rs  snapshot.rs  summary.rs  verify.rs
crates/houndlens-frontend-python/: Cargo.toml
crates/houndlens-frontend-python/src/: lib.rs  parser.rs
crates/houndlens-frontend-rust/: Cargo.toml
crates/houndlens-frontend-rust/src/: lib.rs  parser.rs
crates/houndlens-frontend-typescript/: Cargo.toml
crates/houndlens-frontend-typescript/src/: lib.rs  parser.rs
crates/houndlens-graph/: Cargo.toml
crates/houndlens-graph/src/: impact.rs  lib.rs  linker.rs
crates/houndlens-index/: Cargo.toml
crates/houndlens-index/src/: lib.rs
crates/houndlens-ir/: Cargo.toml
crates/houndlens-ir/src/: invariant.rs  lib.rs
crates/houndlens-lsp/: Cargo.toml
crates/houndlens-lsp/src/: lib.rs
crates/houndlens-plugin/: Cargo.toml
crates/houndlens-plugin/src/: lib.rs
crates/houndlens-query/: Cargo.toml
crates/houndlens-query/src/: executor.rs  lib.rs
crates/houndlens-runtime/: Cargo.toml
crates/houndlens-runtime/src/: lib.rs
crates/houndlens-storage/: Cargo.toml
crates/houndlens-storage/src/: lib.rs
crates/houndlens-testgen/: Cargo.toml
crates/houndlens-testgen/src/: lib.rs
crates/omnilens-cli/: Cargo.toml
crates/omnilens-cli/src/: main.rs
crates/omnilens-cli/src/commands/: analyze.rs  check.rs  ci.rs  fix.rs  hook.rs  index.rs  init.rs  mod.rs  query.rs  verify.rs
crates/omnilens-core/: Cargo.toml
crates/omnilens-core/src/: lib.rs  manifest.rs  output.rs  snapshot.rs  syntax_check.rs  verify.rs
crates/omnilens-ir/: Cargo.toml
crates/omnilens-ir/src/: lib.rs
crates/omnilens-query/: Cargo.toml
crates/omnilens-query/src/: executor.rs  lib.rs  parser.rs
docs/: ROADMAP.md  ai-integration.md  architecture.md  ci-setup.md  vision.md
mcp-server/: index.js  package.json
npm/houndlens/: README.md  install.js  package.json
npm/houndlens-darwin-arm64/: package.json
npm/houndlens-darwin-x64/: package.json
npm/houndlens-linux-arm64/: package.json
npm/houndlens-linux-x64/: package.json
npm/houndlens-win32-x64/: package.json
npm/omnilens/: README.md  install.js  package.json
npm/omnilens-darwin-arm64/: package.json
npm/omnilens-darwin-x64/: package.json
npm/omnilens-linux-arm64/: package.json
npm/omnilens-linux-x64/: package.json
npm/omnilens-win32-x64/: package.json
schemas/: openapi.yaml  verify-output.schema.json
sdk/python/: README.md  pyproject.toml
sdk/python/omnilens/: __init__.py  client.py
