[workspace]
resolver = "2"
members = [
    "crates/houndlens-cli",
    "crates/houndlens-core",
    "crates/houndlens-ir",
    "crates/houndlens-graph",
    "crates/houndlens-index",
    "crates/houndlens-storage",
    "crates/houndlens-query",
    "crates/houndlens-frontend-rust",
    "crates/houndlens-frontend-typescript",
    "crates/houndlens-frontend-python",
    "crates/houndlens-lsp",
    "crates/houndlens-runtime",
    "crates/houndlens-testgen",
    "crates/houndlens-plugin",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/injaehwang/houndlens"
description = "Universal Codebase Intelligence Engine"
rust-version = "1.85"

[workspace.dependencies]
# Core
houndlens-core = { path = "crates/houndlens-core" }
houndlens-ir = { path = "crates/houndlens-ir" }
houndlens-graph = { path = "crates/houndlens-graph" }
houndlens-index = { path = "crates/houndlens-index" }
houndlens-storage = { path = "crates/houndlens-storage" }
houndlens-query = { path = "crates/houndlens-query" }
houndlens-lsp = { path = "crates/houndlens-lsp" }
houndlens-runtime = { path = "crates/houndlens-runtime" }
houndlens-testgen = { path = "crates/houndlens-testgen" }
houndlens-plugin = { path = "crates/houndlens-plugin" }

# Language frontends
houndlens-frontend-rust = { path = "crates/houndlens-frontend-rust" }
houndlens-frontend-typescript = { path = "crates/houndlens-frontend-typescript" }
houndlens-frontend-python = { path = "crates/houndlens-frontend-python" }

# External dependencies
tree-sitter = "0.24"
petgraph = "0.7"
redb = "2.4"
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
sha2 = "0.10"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
memmap2 = "0.9"
walkdir = "2"
ignore = "0.4"
colored = "3"
hex = "0.4"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
