[package]
name = "houndlens-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core orchestration layer for houndlens — coordinates analysis, verification, and reporting"

[dependencies]
houndlens-ir = { workspace = true }
houndlens-graph = { workspace = true }
houndlens-index = { workspace = true }
houndlens-storage = { workspace = true }
houndlens-query = { workspace = true }
houndlens-testgen = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
