[package]
name = "houndlens-frontend-python"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python language frontend — tree-sitter parser to USIR"

[dependencies]
houndlens-ir = { workspace = true }
houndlens-core = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
tree-sitter-python = { workspace = true }
tracing = { workspace = true }
