[package]
name = "houndlens-frontend-typescript"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TypeScript/JavaScript language frontend — tree-sitter parser to USIR"

[dependencies]
houndlens-ir = { workspace = true }
houndlens-core = { workspace = true }
tree-sitter = { workspace = true }
anyhow = { workspace = true }
tree-sitter-typescript = { workspace = true }
tracing = { workspace = true }
