[package]
name = "houndlens-graph"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Semantic graph — in-memory graph database over USIR nodes and edges"

[dependencies]
houndlens-ir = { workspace = true }
petgraph = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
