[package]
name = "houndlens-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM plugin system — sandboxed extensibility for custom analyzers"

[dependencies]
houndlens-ir = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
