[package]
name = "houndlens-query"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HoundQL query language — parser, planner, and execution engine"

[dependencies]
houndlens-ir = { workspace = true }
houndlens-graph = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
